# game-day-phnwtr

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: analytics-service.yml  exercise-service.yml  gateway.yml  notification-service.yml  scenario-service.yml  web.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/kubernetes/analytics-service/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/kubernetes/autoscaling/: horizontal-pod-autoscaler.yaml  vertical-pod-autoscaler.yaml
infrastructure/kubernetes/exercise-service/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/kubernetes/gateway/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/kubernetes/ingress/: certificate.yaml  ingress.yaml
infrastructure/kubernetes/network/: network-policy.yaml
infrastructure/kubernetes/notification-service/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/kubernetes/rbac/: cluster-role-binding.yaml  cluster-role.yaml  service-account.yaml
infrastructure/kubernetes/scenario-service/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/kubernetes/storage/: persistent-volume-claim.yaml  persistent-volume.yaml  storage-class.yaml
infrastructure/kubernetes/web/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
src/backend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  jest.config.ts  nodemon.json  package.json  tsconfig.json
src/backend/src/analytics-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/backend/src/analytics-service/analytics_service/: __init__.py  config.py
src/backend/src/analytics-service/analytics_service/controllers/: __init__.py  gap_analysis.py  metrics.py  reports.py
src/backend/src/analytics-service/analytics_service/models/: __init__.py  gap.py  metric.py  report.py
src/backend/src/analytics-service/analytics_service/services/: __init__.py  gap_analyzer.py  metric_processor.py  report_generator.py
src/backend/src/analytics-service/tests/: __init__.py  test_gap_analyzer.py  test_metric_processor.py  test_report_generator.py
src/backend/src/gateway/: Dockerfile  (+1 more)
src/backend/src/scenario-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/backend/src/scenario-service/scenario_service/: __init__.py  config.py
src/backend/src/scenario-service/scenario_service/controllers/: __init__.py  scenario_controller.py
src/backend/src/scenario-service/scenario_service/models/: __init__.py  scenario.py
src/backend/src/scenario-service/scenario_service/services/: __init__.py  llm_service.py  scenario_generator.py  scenario_validator.py
src/backend/src/scenario-service/scenario_service/utils/: __init__.py  compliance.py  templates.py
src/backend/src/scenario-service/tests/: __init__.py  test_scenario_generator.py  test_scenario_validator.py
src/web/: .dockerignore  .env.example  .eslintrc.ts  .prettierrc  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
(+225 files in other folders)
